EDU-401 Fix cell tags wrapping

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -45,5 +45,6 @@
 
 .SearchPage-cellTags {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
 }
